<resources>
    <string name="app_name">DataShark</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet semper leo.</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="login">Login</string>
    <string name="facebook_login">Continue with Facebook</string>
    <string name="create_account">Create Account</string>
    <string name="tag_line">Science-backed programs for change</string>
    <string name="login_page_string">"That\'s me"</string>
    <string name="signup_page_string">"Let\'s do this"</string>
    <string name="signup_next">"Next"</string>
    <string name="signup_save">"Save"</string>
    <string name="signup_instruction">Add some information to customize your ongo experience.</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="choose_birthdate">Choose Birth Date</string>
    <string name="choose_weight">Choose Weight</string>
    <string name="set_gender">Set Gender</string>
    <string name="set_birthdate">Set Birth Date</string>
    <string name="set_weight">Set Weight</string>
    <string name="gender_instruction">How would you like us to display your gender?</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_custom">Custom</string>
    <string name="number_picker_formatter">%03d</string>
    <string name="weight_unit">lbs</string>
    <string name="skip">Skip</string>
    <string name="password_requirement">Your password must be at least 8 characters long. Passwords are case sensitive."</string>
    <string name="password_msg">Great! Now create a strong password.</string>
    <string name="all_done">"All done!"</string>
    <string name="welcome_string">Hi! Let\'s get you set up.</string>
    <string name="ask_name">Hello there, what\'s your  name?</string>
    <string name="error_invalid_credentials">Invalid e-mail address or password.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="facebook_app_id">1941993669359342</string>
    <string name="fb_login_protocol_scheme">fb1941993669359342</string>
    <string name="motto">"The platform for behavior change</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- Tabbed Activity -->
    <string name="library">Library</string>
    <string name="activity">Recent Activity</string>
    <string name="insights">Insights</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="settings">Settings</string>
    <string name="greeting_morning">Good morning</string>
    <string name="greeting_afternoon">Good afternoon</string>
    <string name="greeting_evening">Good evening</string>
    <string name="greeting_night">Good night</string>
    <!-- Home Tab -->
    <string name="your_progress">Your Progress</string>
    <string name="sessions_completed">Sessions Completed</string>
    <string name="started">Started</string>
    <string name="will_finish">Will Finish</string>
    <string name="new_session">You have a new session today!</string>
    <string name="one_session">Let\'s knock down one session this week!</string>
    <string name="view_activity">View all Activity</string>
    <!-- Community Tab -->
    <string name="status_prompt">Have something to share?</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="like_underlined"><u>Like</u></string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <!-- Update Status Activity -->
    <string name="update_status">Update Status</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_activity">Add Activity</string>
    <string name="community_selection">Everyone</string>
    <!-- Library Tab -->
    <string name="discover_header">Discover something new</string>
    <string name="main_program">MAIN PROGRAM</string>
    <string name="other_program">PROGRAMS</string>
    <!-- Detail Activity -->
    <string name="details">Details</string>
    <string name="crafted">Crafted by</string>
    <string name="purchase">Purchase</string>
    <string name="purchased">Purchased</string>
    <string name="sessions">Sessions</string>
    <string name="users">Users Enrolled</string>
    <string name="my_main_program">My Main Program</string>
    <!-- Discover Activity -->
    <string name="discover">Discover</string>
    <string name="featured">Featured</string>
    <string-array name="categories">
        <item>Everything</item>
        <item>Exercise</item>
        <item>Mindfulness</item>
        <item>Recharge</item>
        <item>Nutrition</item>
        <item>Health &amp; Fitness</item>
        <item>Relationships</item>
        <item>Finance</item>
        <item>Substance Abuse</item>
    </string-array>
    <string name="no_results">Nothing turned up. Bummer!</string>
    <!-- Settings Tab -->
    <string name="account">ACCOUNT</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_change">Change It!</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="logout">Log Out</string>
    <string name="legal">LEGAL</string>
    <string name="terms">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="software">SOFTWARE</string>
    <string name="version">Version Info</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="notification_title">NOTIFY ME ABOUT…</string>
    <string name="session_preference">My Next Session</string>
    <string name="community_preference">Community Updates</string>
    <!-- Profile Activities -->
    <string name="zero">0</string>
    <string name="programs">Programs</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="current_program">YOUR CURRENT PROGRAM</string>
    <string name="edit">Edit</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="weight">Weight</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="no_users">No Users</string>
    <!-- Session Needs Activity -->
    <string name="needs_title">What you need for today\'s session:</string>
    <string name="reschedule">Let Me Reschedule</string>
    <string name="ready">I\'m Ready</string>
    <string name="title_activity_notification_settings">NotificationSettingsActivity</string>
    <!-- Session End Activity -->
    <string name="like_question">How did you like the session?</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="dislikeMsg1">Aw, sorry to hear that.</string>
    <string name="disliekMsg2">Why didn\'t you like the session?</string>
    <string name="time">Time</string>
    <string name="intensity">Intensity</string>
    <string name="timeChoice1">Too short</string>
    <string name="timeChoice2">Too long</string>
    <string name="intensityChoice1">Too easy</string>
    <string name="intensityChoice2">Too hard</string>
    <!-- Insights -->
    <string name="confidence">Confidence</string>
    <string name="preview">Preview</string>
    <string name="again">Do it again!</string>
    <string name="unfollowtext">Unfollow</string>
    <string name="followtext">Follow</string>
    <string name="title_activity_main">Datashark</string>
    <string name="login_with_fitbit">Login with Fitbit</string>
    <string name="scopes_granted_format">Scopes Granted: %s</string>
    <string name="user_info">User</string>
    <string name="activity_info">Activity</string>
    <string name="hello_format">Hello %s!</string>
    <string name="devices">Devices</string>
    <string name="welcome">Welcome!</string>
    <string name="fitbit_logo_description">Fitbit Logo</string>
    <string name="error_loading_devices_format">Error loading devices: %s</string>
    <string name="error_loading_activities_format">Error loading user activities: %s</string>
    <string name="error_loading_user_format">Error loading user: %s</string>
    <string name="scopes_missing_format">`%s` scope(s) required to function correctly.</string>
    <string name="login_title">Login</string>
    <string name="missing_scopes_error">Error logging in. Missing the following required scopes: </string>
    <string name="login_dismissed">Login dismissed or no scopes selected</string>
    <string name="no_data">No data</string>
    <string name="loading">Loading…</string>
    <string name="error_loading_data">Error loading data. Check your internet connection and try
        again later.
    </string>
    <string name="title_activity_home">HomeActivity</string>
</resources>