<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightGray"
    android:padding="15dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressHeader"
        android:text="@string/your_progress"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:id="@+id/divider"
        android:background="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/progressHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numSessions"
        android:textColor="@color/green"
        android:textSize="90sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numSessionsText"
        android:text="@string/sessions_completed"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/numSessions"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startDate"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/startText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startText"
        android:text="@string/started"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/finishDate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finishDate"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/finishText"
        app:layout_constraintLeft_toRightOf="@id/guideline"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finishText"
        android:text="@string/will_finish"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/numSessionsText"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/newSessionText"
        android:text="@string/new_session"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_check_gold"
        android:drawablePadding="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/numSessionsText"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/oneSessionText"
        android:text="@string/one_session"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_check_gold"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@id/newSessionText"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="vertical" />

</android.support.constraint.ConstraintLayout>