<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <ProgressBar
        android:id="@+id/signup_progress"
        style="@style/LinearProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:indeterminate="false"
        android:progress="80"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/signup_instruction"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_progress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/genderHeader" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background_white"
        android:paddingBottom="10dp"
        android:text="@string/choose_gender"
        android:textColor="@color/paleRed"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/genderHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:id="@+id/genderEntry"
        android:clickable="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        android:textColor="@color/white"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/genderEntry"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/birthdayHeader" />

    <TextView
        android:id="@+id/birthdayEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background_white"
        android:clickable="true"
        android:paddingBottom="10dp"
        android:text="@string/choose_birthdate"
        android:textColor="@color/paleRed"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayHeader"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@color/white"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/birthdayEntry"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/weightHeader" />

    <TextView
        android:id="@+id/weightEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background_white"
        android:clickable="true"
        android:paddingBottom="10dp"
        android:text="@string/choose_weight"
        android:textColor="@color/paleRed"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightHeader"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:cardBackgroundColor="@color/paleRed"
        android:id="@+id/nextButton"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_done"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:id="@+id/buttonText"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="12dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_arrow_next_red"
                android:scaleX="-1"
                android:adjustViewBounds="true"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
