<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="data.shark.activities.session.SessionDislikeFragment">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/dislikeHeader1"
        android:gravity="center"
        android:text="@string/dislikeMsg1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/dislikeHeader2"
        android:gravity="center"
        android:text="@string/disliekMsg2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dislikeHeader1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/categories"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/dislikeHeader2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/time"
            android:text="@string/time"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:drawablePadding="8dp"
            android:drawableBottom="@drawable/ic_time_unselected"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/intensity"
            android:text="@string/intensity"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:drawablePadding="8dp"
            android:drawableBottom="@drawable/ic_intensity_unselected"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/timeChoices"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardUseCompatPadding="true"
            android:id="@+id/timeChoice1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/textTimeChoice1"
                android:text="@string/timeChoice1"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/art_too_short"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardUseCompatPadding="true"
            android:id="@+id/timeChoice2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/textTimeChoice2"
                android:text="@string/timeChoice2"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/art_too_long"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/intensityChoices"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardUseCompatPadding="true"
            android:id="@+id/intensityChoice1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/textIntensityChoice1"
                android:text="@string/intensityChoice1"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/art_too_easy"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardUseCompatPadding="true"
            android:id="@+id/intensityChoice2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/textIntensityChoice2"
                android:text="@string/intensityChoice2"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/art_too_hard"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
