<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/red">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_close_white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/closeButton"/>

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/np"
            android:layout_width="wrap_content"
            android:layout_height="270dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:np_dividerColor="#00000000"
            app:np_formatter="@string/number_picker_formatter"
            app:np_max="300"
            app:np_min="80"
            app:np_selectedTextColor="@color/white"
            app:np_textColor="@color/paleRed"
            app:np_textSize="90sp"
            app:np_value="150"
            app:layout_constraintBottom_toTopOf="@+id/nextButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_unit"
            android:id="@+id/lbs"
            android:textColor="@color/paleRed"
            android:textSize="23sp"
            app:layout_constraintLeft_toRightOf="@+id/np"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/closeButton"
            app:layout_constraintBottom_toTopOf="@+id/nextButton" />

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/white"
            android:id="@+id/nextButton"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/set_weight"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:id="@+id/buttonText" />

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>