<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context=".activities.session.SessionNeedsFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp"
        android:src="@drawable/ic_close_black"
        android:id="@+id/closeButton"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/needs_title"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/closeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/title"
        android:layout_marginStart="18dp" />
    
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_marginStart="30dp"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="12dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rescheduleCardView">

    </ListView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/red"
        android:id="@+id/rescheduleCardView"
        app:layout_constraintBottom_toTopOf="@+id/readyCardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/reschedule"
            android:id="@+id/rescheduleTextView"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/green"
        android:id="@+id/readyCardView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/ready"
            android:id="@+id/readyTextView"/>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
